add basic html, api

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" type="text/css" href="./assets/css/styles.css" />
+    <title>Weather</title>
 </head>
-<body>
-    
+<body class="container">
+    <header class="title bg-blue-700 text-white text-5xl h-20 text-center p-3">Weather Dashboard</header>
+    <main class="container">
+        <span id="search"></span>
+        <span id="current"></span>
+        <span id="future"></span>
+    </main>
+    <script src="/assets/js/script.js"></script>
 </body>
 </html>
