APIs now return usable responses.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <span id="search">
             <h2>Enter a location</h2>
 
-            <form>
+            <form id="locationForm">
               <label for="city">City:</label><br>
               <input type="text" id="city" name="city" value=""><br>
               <label for="state">State:</label><br>
