--- a/index.html
+++ b/index.html
@@ -1,41 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/css/styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.7/dayjs.min.js"></script>
     <title>Weather</title>
 </head>
-<body class="container">
-    <header class="title bg-blue-700 text-white text-5xl h-20 text-center p-3">Weather Dashboard</header>
-    <main class="container">
-        <span id="search">
-            <h2>Enter a location</h2>
 
-            <form id="locationForm">
-              <label for="city">City:</label><br>
-              <input type="text" id="city" name="city" value=""><br>
-              <label for="state">State:</label><br>
-              <input type="text" id="state" name="state" value=""><br>
-              <label for="country">Country:</label><br>
-              <input type="text" id="country" name="country" value=""><br>
-              <input type="submit" value="Submit">
-            </form> 
-        </span>
-        <span id="current">
-            <div id="current-day"></div>
-        </span>
-        <span id="future">
-            <div id="day-1"></div>
-            <div id="day-2"></div>
-            <div id="day-3"></div>
-            <div id="day-4"></div>
-            <div id="day-5"></div>
-        </span>
+<body class="container">
+    <header class="title bg-info text-white text-center p-3">Weather Dashboard</header>
+    <main id="city" class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <aside id="search">
+                    <h2>Enter a location</h2>
+                    <form id="locationForm">
+                        <label for="city">City:</label><br>
+                        <input type="text" id="city" name="city" value=""><br>
+                        <label for="state">State:</label><br>
+                        <input type="text" id="state" name="state" value=""><br>
+                        <label for="country">Country:</label><br>
+                        <input type="text" id="country" name="country" value=""><br>
+                        <input type="submit" value="Submit">
+                    </form>
+                </aside>
+            </div>
+            <div class="col-lg-8">
+               <!-- <span id="current">
+                    <div id="current-day" class="card" style="width: 18rem;">
+                        <h5 class="card-title text-center">Today's Weather</h5>
+                        <img class="card-img-top" src="..." alt="Weather Card icon">
+                        <div class="card-body">
+                            <p id="weather-description" class="card-text">Some quick example text to build on the card
+                                title and
+                                make up the bulk of the card's content.</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Temperature:</li>
+                            <li class="list-group-item">Feels like:</li>
+                            <li class="list-group-item">Humidity:</li>
+                            <li class="list-group-item">Wind Speed:</li>
+                            <li class="list-group-item">Wind Direction:</li>
+                        </ul>
+                    </div>
+                </span> -->
+                <span id="future">
+                    <div id="day-1"></div>
+                    <div id="day-2"></div>
+                    <div id="day-3"></div>
+                    <div id="day-4"></div>
+                    <div id="day-5"></div>
+                </span>
+            </div>
+        </div>
+
     </main>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
     <script src="/assets/js/script.js"></script>
 </body>
+
 </html>
