--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     </form>
                 </aside>
             </div>
-            <div class="col-lg-8">
-               <div id="current-day"></div>
-                  <!--   <div id="current-day" class="card" style="width: 18rem;">
+            <div id="card-container" class="container">
+                <div id="current-day"></div>
+                <!--   <div id="current-day" class="card" style="width: 18rem;">
                         <h5 class="card-title text-center">Today's Weather</h5>
                         <img class="card-img-top" src="..." alt="Weather Card icon">
                         <div class="card-body">
@@ -49,13 +49,11 @@
                         </ul>
                     </div>
                 </span> -->
-                <span id="future">
-                    <div id="day-1"></div>
-                    <div id="day-2"></div>
-                    <div id="day-3"></div>
-                    <div id="day-4"></div>
-                    <div id="day-5"></div>
-                </span>
+                <div id="day-1"></div>
+                <div id="day-2"></div>
+                <div id="day-3"></div>
+                <div id="day-4"></div>
+                <div id="day-5"></div>
             </div>
         </div>
 
