--- a/index.html
+++ b/index.html
@@ -30,33 +30,15 @@
                     </form>
                 </aside>
             </div>
-            <div id="card-container" class="container">
-                <div id="current-day"></div>
-                <!--   <div id="current-day" class="card" style="width: 18rem;">
-                        <h5 class="card-title text-center">Today's Weather</h5>
-                        <img class="card-img-top" src="..." alt="Weather Card icon">
-                        <div class="card-body">
-                            <p id="weather-description" class="card-text">Some quick example text to build on the card
-                                title and
-                                make up the bulk of the card's content.</p>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Temperature:</li>
-                            <li class="list-group-item">Feels like:</li>
-                            <li class="list-group-item">Humidity:</li>
-                            <li class="list-group-item">Wind Speed:</li>
-                            <li class="list-group-item">Wind Direction:</li>
-                        </ul>
-                    </div>
-                </span> -->
-                <div id="day-1"></div>
-                <div id="day-2"></div>
-                <div id="day-3"></div>
-                <div id="day-4"></div>
-                <div id="day-5"></div>
+            <div id="card-container" class="container row">
+                <div id="current-day" class="col"></div>
+                <div id="day-1" class="col"></div>
+                <div id="day-2" class="col"></div>
+                <div id="day-3" class="col"></div>
+                <div id="day-4" class="col"></div>
+                <div id="day-5" class="col"></div>
             </div>
         </div>
-
     </main>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
