--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <title>Weather</title>
 </head>
 
-<body class="container">
-    <header class="title bg-info text-white text-center p-3 container-fluid">Weather Dashboard</header>
-    <main id="main-container" class="container">
+<body class="bg-info">
+    <header class="h1 title bg-info text-white max-width text-center p-3 container-fluid">Weekly Weather</header>
+    <main id="main-container" class="container bg-info bg-light">
         <div id="search">
             <header class="title d-flex justify-content-between p-3">
-            <h2>Enter a location</h2>
-            <h2 id="current-location">Current Location: </h2>
+                <h2>Enter a location</h2>
+                <h2 id="current-location">Current Location: </h2>
             </header>
             <form id="locationForm">
                 <label for="city">City:</label><br>
@@ -31,12 +31,12 @@
             </form>
         </div>
         <div id="card-container" class="container row">
-            <div id="current-day" class="col p-3"></div>
-            <div id="day-1" class="col p-3"></div>
-            <div id="day-2" class="col p-3"></div>
-            <div id="day-3" class="col p-3"></div>
-            <div id="day-4" class="col p-3"></div>
-            <div id="day-5" class="col p-3"></div>
+            <div id="current-day" class="col p-3 bg-info bg-light"></div>
+            <div id="day-1" class="col p-3 bg-light"></div>
+            <div id="day-2" class="col p-3 bg-light"></div>
+            <div id="day-3" class="col p-3 bg-light"></div>
+            <div id="day-4" class="col p-3 bg-light"></div>
+            <div id="day-5" class="col p-3 bg-light"></div>
         </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
