add search history buttons

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
                 <input type="text" id="country" name="country" value=""><br>
                 <input type="submit" id="submitButton" value="Submit">
             </form>
-            <ul id="search-history" class="h4">Search History
-                
-            </ul>
+            <aside>
+                <ul id="search-history" class="h4 btn-group-vertical">Search History
+
+                </ul>
+            </aside>
         </div>
         <div id="card-container" class="container row">
             <div id="current-day" class="col p-3 bg-info bg-light"></div>
