--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="bg-info">
-    <header class="h1 title bg-info text-white max-width text-center p-3 container-fluid">Weekly Weather</header>
+    <header class="h1 title bg-info text-white max-width text-center p-3 container-fluid">Weather Dashboard</header>
     <main id="main-container" class="container bg-info bg-light">
         <header class="title d-flex justify-content-between p-3">
             <h2>Enter a location</h2>
